--- a/test/browser.html
+++ b/test/browser.html
@@ -20,7 +20,7 @@
 		pane.addInput(params, 'prop', {
 			view: 'dots',
 		}).on('change', (ev) => {
-			console.log(ev.value);
+			//console.log(ev.value);
 		});
 
 		window.pane = pane;
