feat: Adding line count. #1

--- a/test/browser.html
+++ b/test/browser.html
@@ -19,6 +19,7 @@
 		// TODO: Update parameters for your plugin
 		pane.addInput(params, 'prop', {
 			view: 'dots',
+			lineCount: 3
 		}).on('change', (ev) => {
 			//console.log(ev.value);
 		});
