feat: Changing ID.

--- a/test/browser.html
+++ b/test/browser.html
@@ -18,7 +18,7 @@
 
 		// TODO: Update parameters for your plugin
 		pane.addInput(params, 'prop', {
-			view: 'dots',
+			view: 'file-input',
 			lineCount: 3
 		}).on('change', (ev) => {
 			//console.log(ev.value);
