feat: Changing to string.

--- a/test/browser.html
+++ b/test/browser.html
@@ -9,7 +9,7 @@
 	<script src="../dist/tweakpane-plugin-template.js"></script>
 	<script>
 		const params = {
-			prop: 3,
+			prop: "",
 		};
 		const pane = new Tweakpane.Pane();
 
