feat: Adding filetypes filtering.

--- a/test/browser.html
+++ b/test/browser.html
@@ -19,7 +19,8 @@
 		// TODO: Update parameters for your plugin
 		pane.addInput(params, 'file', {
 			view: 'file-input',
-			lineCount: 3
+			lineCount: 3,
+			filetypes: ['.png', '.jpg'],
 		}).on('change', (ev) => {
 			//console.log(ev.value);
 		});
