chore: Refactoring and commenting code.

--- a/test/browser.html
+++ b/test/browser.html
@@ -22,7 +22,7 @@
 			lineCount: 3,
 			filetypes: ['.png', '.jpg'],
 		}).on('change', (ev) => {
-			//console.log(ev.value);
+			console.log(ev.value);
 		});
 
 		window.pane = pane;
