--- a/test/browser.html
+++ b/test/browser.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-</head>
-<body>
-	<script src="../node_modules/tweakpane/dist/tweakpane.js"></script>
-	<script src="../dist/tweakpane-plugin-template.js"></script>
-	<script>
-		const params = {
-			file: "",
-		};
-		const pane = new Tweakpane.Pane();
+	<head>
+		<meta charset="UTF-8" />
+		<title></title>
+	</head>
+	<body>
+		<script src="../node_modules/tweakpane/dist/tweakpane.js"></script>
+		<script src="../dist/tweakpane-plugin-template.js"></script>
+		<script>
+			const params = {
+				file: '',
+			};
+			const pane = new Tweakpane.Pane();
 
-		// Register plugin
-		pane.registerPlugin(TweakpaneTemplatePlugin);
+			// Register plugin
+			pane.registerPlugin(TweakpaneTemplatePlugin);
 
-		// TODO: Update parameters for your plugin
-		pane.addInput(params, 'file', {
-			view: 'file-input',
-			lineCount: 3,
-			filetypes: ['.png', '.jpg'],
-		}).on('change', (ev) => {
-			console.log(ev.value);
-		});
+			// TODO: Update parameters for your plugin
+			pane
+				.addInput(params, 'file', {
+					view: 'file-input',
+					lineCount: 3,
+					filetypes: ['.png', '.jpg'],
+				})
+				.on('change', (ev) => {
+					console.log(ev.value);
+				});
 
-		window.pane = pane;
-	</script>
-</body>
+			window.pane = pane;
+		</script>
+	</body>
 </html>
