fix: Adding linting and fixing package and plugin name.

--- a/test/browser.html
+++ b/test/browser.html
@@ -14,7 +14,7 @@
 			const pane = new Tweakpane.Pane();
 
 			// Register plugin
-			pane.registerPlugin(TweakpaneTemplatePlugin);
+			pane.registerPlugin(TweakpaneFileImportPlugin);
 
 			pane
 				.addInput(params, 'file', {
