--- a/test/browser.html
+++ b/test/browser.html
@@ -5,9 +5,10 @@
 		<title></title>
 	</head>
 	<body>
-		<script src="../node_modules/tweakpane/dist/tweakpane.js"></script>
-		<script src="../dist/tweakpane-plugin-file-import.js"></script>
-		<script>
+		<script type="module">
+			import * as Tweakpane from '../node_modules/tweakpane/dist/tweakpane.js';
+			import * as TweakpaneFileImportPlugin from '../dist/tweakpane-plugin-file-import.js';
+
 			const params = {
 				file: '',
 			};
@@ -17,7 +18,7 @@
 			pane.registerPlugin(TweakpaneFileImportPlugin);
 
 			pane
-				.addInput(params, 'file', {
+				.addBinding(params, 'file', {
 					view: 'file-input',
 					lineCount: 3,
 					filetypes: ['.png', '.jpg'],
