chore: Revert example to show console.log

--- a/test/browser.html
+++ b/test/browser.html
@@ -24,7 +24,7 @@
 					filetypes: ['.png', '.jpg'],
 				})
 				.on('change', (ev) => {
-					//console.log(ev.value);
+					console.log(ev.value);
 				});
 
 			window.pane = pane;
